We added a new section About

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,4 +10,9 @@
     <a href="www.google.com">Hola mundo como estas</a>
 </div>
 
+<p>Hace tiempo no escribo nada en HTML 
+</p>
+
+<h1 class="text-warning">Hello World</h1>
+
 <h1>@DateTime.UtcNow</h1>
